# classical-poem-llm

./: .gitignore  Cargo.toml  README.md  model.hexpat
.devcontainer/: devcontainer.json
crates/logger/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: args.rs  main.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: args.rs  main.rs  train.rs
patches/: PatternLanguage_cli11.patch
poems/: Leaves_of_Grass.txt  Shakespeare_Sonnets.txt  The_Raven_Poe.txt
scripts/: .gitignore  apply_patches.sh  clang.sh  cmake_install.sh  create_patch.sh  create_patchs.sh  pattern_language.patch  pattern_language.sh
