[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
humansize = { version = "2.1.3", features = ["impl_style"] }
logger = { version = "0.1.0", path = "../logger" }
serde = { version = "1.0.219", features = ["derive"] }
tokenizer = { version = "0.1.0", path = "../tokenizer" }
