[package]
name = "trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.19.2"
clap = { version = "4.5.37", features = ["derive"] }
humansize = "2.1.3"
logger = { version = "0.1.0", path = "../logger" }
model = { version = "0.1.0", path = "../model" }
tokenizer = { version = "0.1.0", path = "../tokenizer" }
